src/index.css
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;800;900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,400;0,500;1,400&family=Roboto:wght@400;500;900&family=Ubuntu:wght@300;400;500&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    font-family: "Noto Sans", sans-serif;
    background: #fafaf9;
    color: #333;
    font-size: 16px;
    padding: 10;
    margin: 10;
}

